[package]
name = "tests-workspaces"
version = "0.1.0"
edition = "2018"

[dev-dependencies]
workspaces = "0.1.1"
near-jsonrpc-primitives = "0.5"
near-primitives = "0.5"
anyhow = "1.0"
borsh = "0.9"
maplit = "1.0"
near-units = "0.1.0"
# arbitrary_precision enabled for u128 types that workspaces requires for Balance types
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tokio = { version = "1.10.0", features = ["full"] }
nft-bid-market = { path = "../market"}
nft-contract = { path = "../nft" }
near-contract-standards = "4.0.0-pre.5"